stock_barcode/static/src/scss/client_action.scss
.o_barcode_client_action {
    display: flex;
    flex-direction: column;
    height: 100%;
    background-color: white;

    .o_invisible {
        visibility: hidden;
    }

    .o_strong {
        font-weight: bold;
    }

    // Top navbar
    // =====================================
    .o_barcode_header {
        flex: 0 0 46px;

        .nav-link {
            cursor: pointer;
        }
         .nav-link, .navbar-text {
            font-size: 16px;
        }
    }

    // Top Block
    // =====================================
    .o_barcode_message {
        min-height: 150px;
        box-shadow: inset 0 0 20px $gray-900;

        .o_barcode_pic, .o_scan_message {
            display: flex;
            align-items: center;
        }

        .o_barcode_pic {
            flex: 1 1 60%;
            width: 50%;
            max-width: 200px;
            background: url("../../img/barcode_white.png") center/contain no-repeat;
            background-size: 100% 100%;
            &.o_js_has_warning_msg {
                background: none;
                span, .o_stock_mobile_barcode {
                    display: none;
                }
                .fa {
                    display: block;
                }
            }
            .fa-exclamation-triangle {
                display: none;
                opacity: 0.8;
            }

            span {
                @include o-position-absolute(50%, -5px, auto, -5px);
                height: 5px;
                background: rgba(red, 0.6);
                box-shadow: 0 1px 10px 1px rgba(red, 0.8);
            }
        }

        .o_scan_message {
            flex: 1 0 30%;
            max-height: 40px;
        }
    }

    // Summary
    // =====================================
    .o_barcode_lines_header {
        border: 1px solid $gray-400;
        border-width: 1px 0;
        background-color: desaturate($gray-200, 100%);
        text-shadow: 0 1px 0 white;
        color: $gray-900;
        &:empty {
            display: none;
        }
        .o_barcode_location_label {
            padding: 1px 0 0;
            line-height: 19px;
        }
        .o_barcode_summary_location_src, .o_barcode_summary_location_dest {
            padding: 1px 4px 0 2px;
            &.o_barcode_summary_location_highlight {
                background-color: white;
            }
            &.o_strong {
                background-color: transparent;
            }
        }
    }

    .o_barcode_lines {
        clear: both;
        flex: auto;
        overflow: auto;
    }

    // Lines Block
    // =====================================
    .o_barcode_lines {
        overflow-y: auto;
        box-shadow: inset 0 -7px 4px -5px $gray-300;

        .o_barcode_line {
            flex: 0 0 auto;
            border-width: 1px 0;

            &:first-child {
                border-top: 0;
            }

            &:last-child {
                box-shadow: 0 3px 10px $gray-300;
                margin-bottom: 2rem;
            }

            .o_edit {
                @include o-hover-opacity();
            }

            .o_barcode_scanner_qty {
                font-size: 1em;
                border-color: transparent; // Overwrite default badge color
                margin-left: -$badge-padding-x; // Compensate badge padding

                &[class*="badge-"] {
                    margin-left: 0; // If a style class is applied, reset compensation margin
                }

                .qty-done, .product_qty {
                    min-width: 20px;
                }
            }

            &_details {
                .fa:first-child {
                    opacity: 0.5;
                    margin-right: 5px;
                }
            }

            &_actions {}

            &.o_barcode_line_package {
                .o_barcode_line_details > * {
                    flex: 1 0 auto;
                }

                .o_barcode_line_details > .o_barcode_package_name {
                    flex: 0 1 auto;
                    overflow: hidden;

                    > span {
                        max-width: 100%;
                        text-overflow: ellipsis;
                        overflow: hidden;
                    }
                }
            }
        }

        &.o_js_has_highlight .o_barcode_line.o_highlight {
            &.o_highlight_red {
                background-color: rgba(theme-color('danger'), 0.25);
                border-color: theme-color('danger');
            }
            &.o_highlight_green {
                background-color: rgba($success, 0.25);
                border-color: $success;
            }
            margin-bottom: 0;

            .product-label, .o_barcode_scanner_qty {
                color: $headings-color;
            }

            .o_barcode_scanner_qty {
                font-size: 1.2em;
            }

            .qty-done, .product_qty {
                font-weight: bold;

                &.o_js_qty_animate {
                    animation: o_barcode_scanner_qty_update .2s alternate;
                }
            }
        }
    }
    // Embedded views
    // =====================================
    .o_barcode_generic_view {
        flex: 1;
        overflow: auto;

        .o_view_controller, .o_view_controller .o_form_view.o_form_nosheet {
            height: 100%;
            flex-grow: 1;
            padding-top: 0;
        }

        .o_form_view.o_xxs_form_view {
            .o_td_label > .o_form_label {
                color: $gray-900;
                font-weight: bold;
                padding-top: 5px;
            }
            .o_field_widget {
                font-size: 1.2em;
                .btn.fa {
                    font-size: 1em;
                }
            }
            .o_list_view {
                th, .o_field_widget {
                    font-size: $font-size-base;
                }
            }
        }
    }

    // Settings menu
    // =====================================
    .o_barcode_settings {
        display: flex;
        flex: auto;

        > button {
            flex: 1 0 auto;
            border-bottom: 1px solid $gray-700;

            &:last-child {
                border-bottom: 0;
            }
        }
    }

    // Control buttons (validate, previous,
    // next, put in pack, ...)
    // =====================================
    .o_barcode_control {
        flex: 0 0 60px;
        margin: 0 -1px;
        width: 100%;
        > .btn {
            flex: 1;
            width: 50%;
            border-width: 1px 0 0 0;
            border-style: solid;
            &.btn-secondary {
                color: $gray-800;
                border-color: $gray-400;
            }
            &.btn-primary {
                border-color: $primary;
            }
            &.btn-success {
                border-color: $success;
            }
            &[disabled] {
                opacity: $btn-disabled-opacity;
                background-color: $gray-200;
                color: $btn-link-disabled-color;
            }
            + .btn {
                border-left-width: 1px;
            }
        }
        .fa-angle-left, .fa-angle-right {
            font-size: 1.5em;
        }
        &:first-of-type {
            box-shadow: 0 -3px 10px $gray-300;
        }
    }
}

